# watchback

./: .gitignore  LICENSE  README.md  config.py  gui.py  main.py  pyproject.toml  sync.py  watchback.spec
scripts/: build.py
src/watchback/: config.py  gui.py  main.py  progress.py  restore.py  restore_gui.py  sync.py
src/watchback/assets/: styles.qss
